application/views/scss/components/_collection-product.scss
.collection-shops {
    &-item {
        background: #fff;
        display: flex;
        flex-flow: row wrap;
        justify-content: space-between;
        gap: 3rem;
        padding: 2rem 0;
        &:nth-child(even) {
            @include media-breakpoint-up(xl) {
                flex-direction: row-reverse;
                .row {
                    flex-direction: row-reverse;
                }
            }
            @include media-breakpoint-down(sm) {
                flex-direction: column;
            }
        }
        .shop {
            width: 100%;
            @include media-breakpoint-up(lg) {
                flex: 0 0 300px;
                max-width: 300px;
            }
        }
    }
    .product-wrapper {
        flex: 1;
        .products {
            height: 100%;
        }
    }
}
.category-product {
    @include media-breakpoint-down(sm) {
        flex-direction: column;
    }
}
.category-product-layout-1 {
    .products {
        height: 100%;
        border-radius: 0;
        border: none;
        .content-overlay {
            background: rgba(0, 0, 0, 0.7);
            position: absolute;
            height: 100%;
            width: 100%;
            #{$start-direction}: 0;
            top: 0;
            bottom: 0;
            #{$end-direction}: 0;
            opacity: 0;
            transition: all 0.4s ease-in-out 0s;
            z-index: 1;
            pointer-events: none;
        }
        &:hover {
            .content-overlay {
                opacity: 1;
            }
            .content-details {
                top: 50%;
                #{$start-direction}: 50%;
                opacity: 1;
            }
        }
    }
    .ft-pro {
        position: relative;
        background-color: #fff;
        .tag--soldout {
            top: auto;
            bottom: 20px;
        }
        &.ft-pro-1 {
            grid-column-start: 1;
            grid-column-end: 3;
            grid-row-start: 1;
            grid-row-end: 3;
            @include media-breakpoint-down(sm) {
                grid-column-end: 3;
                grid-row-end: 2;
            }
            .products {
                padding: 0;
            }
        }
    }
}
.product-layout-2 {
    display: grid;
    grid-gap: 1px;
    grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));

    @include media-breakpoint-up(lg) {
        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
        grid-gap: 3rem;
    }
    .product-item {
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 100%;
        flex-direction: column;
        @include media-breakpoint-up(lg) {
            flex-direction: row;
        }
        .products-body {
            position: relative;
            width: 100%;
            @include media-breakpoint-up(lg) {
                width: 150px;
            }
        }
        .products-img {
            margin: 0;
        }
        .products-foot {
            @include media-breakpoint-up(lg) {
                padding: 20px;
                width: calc(100% - 150px);
                text-align: #{$start-direction};
            }
            .products-title {
                @include media-breakpoint-up(lg) {
                    padding-#{$start-direction}: 0;
                    //margin: 0;
                }
            }
            .products-price {
                justify-content: center;
            }
        }
    }
}
.product-layout-3 {
    // max-width: 1000px;
    margin: auto;
    @include media-breakpoint-up(lg) {
        display: grid;
        column-gap: 3rem;
        grid-template-columns: repeat(4, 1fr);
    }
    .products {
        height: 100%;
        display: flex;
        align-content: center;
        &-body {
            flex: 0 0 50%;
            @include media-breakpoint-up(lg) {
                //flex: 1;
            }
        }
        &-foot {
            background: $bg-white;
            flex: 1;
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            // padding: 0;
            min-height: 50%;
            @include media-breakpoint-up(lg) {
                min-height: 234px;
            }
        }

        .products-img {
            margin: 0;
            //border: $border;

            img {
                border: none;
            }
        }
    }
    .grid {
        overflow: hidden;
        &-1 {
            grid-column-start: 1;
            grid-column-end: 3;
            grid-row-start: 1;
            grid-row-end: 3;
            .products-body {
                @include media-breakpoint-up(lg) {
                    flex: 1;
                }
            }
            .products-foot {
                @include media-breakpoint-up(lg) {
                    max-width: 234px;
                    width: 100%;
                    background-color: #fff;
                    position: absolute;
                    bottom: 0;
                    right: 0;
                }
            }
        }
        &-2 {
            grid-column-start: 3;
            grid-column-end: 5;
            grid-row-start: 1;
            grid-row-end: 2;
            .products {
                flex-direction: row-reverse;
            }
        }
        &-3 {
            grid-column-start: 3;
            grid-column-end: 5;
            grid-row-start: 2;
            grid-row-end: 3;
        }
    }
}
.content-details {
    color: #fff;
    position: absolute;
    z-index: 1;
    text-align: center;
    padding-#{$start-direction}: 1em;
    padding-#{$end-direction}: 1em;
    width: 100%;
    top: 80%;
    #{$start-direction}: 50%;
    opacity: 0;
    transform: translate(-50%, -50%);
    transition: all 0.3s ease-in-out 0s;
}

